Update Del11.tex, Del13.tex, and 5 more files...

--- a/CSB/EPG1/Presentation/Frames/Del11.tex
+++ b/CSB/EPG1/Presentation/Frames/Del11.tex
@@ -1,23 +1,26 @@
 \begin{frame}
 \frametitle{Grafer med forskellige $h_0$}
-
-\begin{figure}[h!]
+\begin{minipage}[t]{0.49\textwidth}
+$$h_0=10$$ 
 \includegraphics[scale=0.3]{img/fig1}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+$$h_0=20$$ 
 \includegraphics[scale=0.3]{img/fig2}
-\caption{Det ses at en ændring fra $h_0=10$ til $h_0=20$ kun ændrer højden af kæden men ikke formen.}
-\end{figure}
+\end{minipage}
 \end{frame}
-
+%
 \begin{frame}
 \frametitle{Grafer med forskellige $\lambda$}
-
-\begin{figure}[h!]
+\begin{minipage}[t]{0.49\textwidth}
+$$\lambda=2$$
 \includegraphics[scale=0.3]{img/fig3}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+$$\lambda=1$$
 \includegraphics[scale=0.3]{img/fig4}
-\caption{Det ses at en ændring fra $\lambda=2$ til $\lambda=1$ ændrer kædelinjen, både i forhold til højden af pælene og kædens hældning.}
-\end{figure}
+\end{minipage}
 %
-
 \end{frame}
 
 
