--- a/CSB/EPG1/Presentation/Frames/Del14a.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14a.tex
@@ -1,8 +1,8 @@
 \begin{frame}
-\frametitle{Nulpunktbestemmelse med bisektion og Newton}
+\frametitle{Nulpunktbestemmelse med \phantom{Heeekjjjjeej} bisektion og Newton}
 \begin{itemize}
 \item Bisektion finder altid et svar
-\item Newton funder hurtigt et svar
+\item Newton finder hurtigt et svar
 \end{itemize}
 
 $$\begin{array}{l|c|c}
