--- a/CSB/EPG1/Presentation/Frames/Del14b.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14b.tex
@@ -1,5 +1,8 @@
 \begin{frame}
 \frametitle{Sekantmetoden}
+\begin{itemize}
+\item Python
+\end{itemize}
 $$\begin{array}{l|c|c}
 \text{Metode} & \text{Resultat} & \text{Iterationer}\\
 \hline
