--- a/CSB/EPG2/Presentation/Frames/Del21_2.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21_2.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-\frametitle{Modificeret Euler metode og trapezmetoden}
+\frametitle{Modificeret Euler metode og \phantom{HHHHHHH} trapezmetoden}
 \begin{itemize}
 \item Modifiveret Euler metode anvendt på $$\frac{dy}{dx}=f(x),\phantom{hi}y(a)=y_0$$
 \item Trapezmetoden anvendt på $$y_0 + \int_a^b f(x) dx$$
@@ -7,7 +7,7 @@
 \end{frame}
 %
 \begin{frame}
-\frametitle{Modificeret Euler metode og trapezmetoden}
+\frametitle{Modificeret Euler metode og \phantom{HHHHHHH} trapezmetoden}
 \begin{itemize}
 \item For modificeret Euler metode
 \begin{align*}
@@ -23,7 +23,7 @@ y_N &= y_0 + \frac{h}{2}\left( f(x_0) + 2(f(x_1) + \cdots + f(x_{N-1})) + f(x_N)
 \end{frame}
 %
 \begin{frame}
-\frametitle{Modificeret Euler metode og trapezmetoden}
+\frametitle{Modificeret Euler metode og \phantom{HHHHHHH} trapezmetoden}
 \begin{itemize}
 \item For trapezmetoden
 \begin{align*}
