--- a/CSB/EPG1/Presentation/Frames/Del14c.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14c.tex
@@ -1,17 +1,23 @@
 \begin{frame}
-\frametitle{Overskrift}
+\frametitle{Fixpunktsligning}
 \center
-Omskrivningerne kan fåes alt efter hvilket $\lambda$ der isolerers for
+%
+\begin{itemize}
+\item Python
+\end{itemize}
 %
 \begin{align*}
-\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
-\lambda&=\dfrac{\lambda+15}{\text{cosh}(\dfrac{75}{\lambda})}
+\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})=\lambda+15 
+\phantom{HHH} & \Leftrightarrow \phantom{HHH}
+\lambda=\dfrac{\lambda+15}{\text{cosh}(\dfrac{75}{\lambda})} \\
+\\
+ \phantom{HHH} & \Leftrightarrow \phantom{HHH}
+\lambda = \lambda \cdot \text{cosh}(\dfrac{75}{\lambda})-15  
 \end{align*}
- og
-\begin{align*}
-\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
-\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})-15 &=\lambda
-\end{align*}
-
-Første omksrivning virker ikke, mens anden kommer frem til en løsning, når de bruges i scriptsene.
+\begin{itemize}
+\item Første virker ikke 
+\item Anden virker 
+\end{itemize}
+%Virker
+%Første omksrivning virker ikke, mens anden kommer frem til en løsning, når de bruges i scriptsene.
 \end{frame}
