--- a/CSB/EPG2/Presentation/Frames/Del21.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21.tex
@@ -37,7 +37,7 @@ k_2 & = f \left( x_n + \frac{h}{2} , y_n = + \frac{h}{2} k_1 \right)  \\
 \end{align*}
 \end{minipage} 
 \phantom{Hej}
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + h k_2 \\
@@ -56,7 +56,7 @@ y_{n+1} & = y_n + h k_2 \\
 %
 \begin{frame}
 \frametitle{Modificeret Eulersmetode}  
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
 k_2 & = f( x_n + h , y_n = + h k_1 ) \\
@@ -64,7 +64,7 @@ k_2 & = f( x_n + h , y_n = + h k_1 ) \\
 %
 \end{minipage} 
 \phantom{Hej}
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + \frac{h}{2} (k_1 + k_2 ) \\
@@ -83,7 +83,7 @@ y_{n+1} & = y_n + \frac{h}{2} (k_1 + k_2 ) \\
 %
 \begin{frame}
 \frametitle{Heuns metode }
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
 k_2 & = f \left( x_n + \frac{2}{3} h , y_n = + \frac{2}{3} h k_1 \right) \\
@@ -91,7 +91,7 @@ k_2 & = f \left( x_n + \frac{2}{3} h , y_n = + \frac{2}{3} h k_1 \right) \\
 %
 \end{minipage} 
 \phantom{Hej}
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + \frac{h}{4} (k_1 + k_2 )  \\
