Update Del22.tex, Del23.tex, and 3 more files...

--- a/CSB/EPG2/Presentation/Frames/Del22.tex
+++ b/CSB/EPG2/Presentation/Frames/Del22.tex
@@ -13,7 +13,7 @@ y_{n+1}&=y_n+\frac{h}{6}(k_1+2k_2+2k_3+k_4)
 
 \begin{frame}
 \frametitle{Simpsons regel}
-Hvis funktionen afhænger af en koordinat så svarer $k_1$ til startpunktet, $k_4$ til endepunktet og $k_2$ og $k_3$ bliver i midtpunktet
+%Hvis funktionen afhænger af en koordinat så svarer $k_1$ til startpunktet, $k_4$ til endepunktet og $k_2$ og $k_3$ bliver i midtpunktet
 \begin{align*}
 \int_a^bf(x)dx &\approx \frac{b-a}{6} \left( f(a)+4f \left( \frac{a+b}{2} \right) f(a+b)+f(b) \right)\\
 h&=b-a\\
