--- a/CSB/EPG2/Presentation/Frames/Del23.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23.tex
@@ -1,6 +1,27 @@
 \begin{frame}
 \frametitle{System af differentialligninger}
+\begin{minipage}[t]{0.50\textwidth}
+\begin{align}
+\frac{dx_1}{dt} & = - \alpha x_1 x_2, \\
+\frac{dx_2}{dt} & = \alpha x_1 x_2 - \beta x_2 , \\
+\frac{dx_3}{dt} & = \beta x_2.
+\end{align}
+\end{minipage}
+\begin{minipage}[t]{0.45\textwidth}
 \begin{itemize}
-\item Eventuelt lidt om det konkrete eksempel
+\item $100.000$ individer 
+\item $N = 100$ 
+\item $x_{1,0} = 90$ 
+\item $x_{2,0} = 5 $
+\item $\alpha = 0.01$ 
+\item $\beta = 0.35$
+\end{itemize}
+\phantom{H}
+\end{minipage}
+\\
+\begin{itemize}
+\item $x_1(t)$ Individer der er modtagelige 
+\item $x_2(t)$ Antal smittede 
+\item $x_3(t)$ Antal immune 
 \end{itemize}
 \end{frame}
