--- a/CSB/EPG2/Presentation/Frames/Del23b.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23b.tex
@@ -31,7 +31,23 @@
 \begin{frame}
 \frametitle{Betydning af parametrene}
 \begin{itemize}
-\item Ændring af indledende syge fra $5$ til $1$
+\item Fordobling af antal immune, 
+\item $x_{1,0}$ fra 90 til 85
+\end{itemize}
+
+\begin{minipage}{0.49\textwidth}
+\includegraphics[scale=0.3]{fig/img/t_a1_b35_g0.png}
+\end{minipage}
+%
+\begin{minipage}{0.49\textwidth}
+\includegraphics[scale=0.3]{fig/img/t_x1_5_x2_85.png}
+\end{minipage}
+\end{frame}
+%
+\begin{frame}
+\frametitle{Betydning af parametrene}
+\begin{itemize}
+\item Ændring af indledende syge, $x_{2,0}$, fra $5$ til $1$
 \end{itemize}
 
 \begin{minipage}{0.49\textwidth}
@@ -43,17 +59,4 @@
 \end{minipage}
 \end{frame}
 %
-\begin{frame}
-\frametitle{Betydning af parametrene}
-\begin{itemize}
-\item Fordobling af antal immune
-\end{itemize}
 
-\begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_a1_b35_g0.png}
-\end{minipage}
-%
-\begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_x1_5_x2_85.png}
-\end{minipage}
-\end{frame}
