--- a/CSB/EPG2/Presentation/Frames/Del23a.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23a.tex
@@ -1,6 +1,6 @@
-%\begin{frame}
-%\frametitle{Overskrift}
-%\begin{itemize}
-%\item Fisk
-%\end{itemize}
-%\end{frame}
+\begin{frame}
+\frametitle{Eulers metode og RK4}
+\begin{itemize}
+\item Python
+\end{itemize}
+\end{frame}
