--- a/CSB/EPG2/incl/main/11.tex
+++ b/CSB/EPG2/incl/main/11.tex
@@ -53,7 +53,7 @@ Genkald, at
 \end{align}
 hvor $\Bar{f}$ er den gennemsnitlige funktionsværdi i intervallet $[a,b]$.
 Bemærk, at trapezreglen tager udgangspunkt i, at gennemsnittet for funktionsværdien er gennemsnittet $a$ og $b$, og approksimerer dermed integralet for $f(x)$. 
-Midtpunktsreglen gør det samme, men med ét punkt i stedet for 
+Midtpunktsreglen gør det samme, men med ét punkt i stedet for. 
 \\
 Det interpolerende polynomium fundet via trapezreglen er givet ved
 \begin{align*}
