--- a/CSB/EPG1/Presentation/Frames/Del2.tex
+++ b/CSB/EPG1/Presentation/Frames/Del2.tex
@@ -6,10 +6,18 @@ Del 2: \\
 Interpolation af funktioner
 \end{frame}
 %
-\begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\frametitle{Overskrift}
+%\begin{itemize}
+%\item Fisk
+%\end{itemize}
+%\end{frame}
 %%
+\input{Frames/Del21.tex}
+\input{Frames/Del22.tex}
+\input{Frames/Del23.tex}
+\input{Frames/Del24.tex}
+\input{Frames/Del25.tex}
+\input{Frames/Del26.tex}
+\input{Frames/Del27.tex}
+\input{Frames/Del28.tex}
