--- a/CSB/EPG2/Presentation/Frames/Del1.tex
+++ b/CSB/EPG2/Presentation/Frames/Del1.tex
@@ -6,10 +6,14 @@ Del 1: \\
 Kvadraturregler
 \end{frame}
 %
-\begin{frame}
-\frametitle{Overskrift}
-\begin{itemize}
-\item Fisk
-\end{itemize}
-\end{frame}
+%\begin{frame}
+%\frametitle{Overskrift}
+%\begin{itemize}
+%\item Fisk
+%\end{itemize}
+%\end{frame}
 %%
+\input{Frames/Del11.tex}
+\input{Frames/Del12.tex}
+\input{Frames/Del13.tex}
+\input{Frames/Del14.tex}
