--- a/CSB/EPG1/Presentation/Frames/Del24.tex
+++ b/CSB/EPG1/Presentation/Frames/Del24.tex
@@ -9,7 +9,7 @@
     %
     \begin{figure}[h!]
     \begin{center}
-    \includegraphics[scale=0.5]{Images/N=13.png}
+    \includegraphics[scale=0.5]{images/N=13.png}
     \end{center}
     \caption{$N = 13$ - Eksempel på Runges Fænomen.}
     %
@@ -19,7 +19,7 @@
 \begin{frame}{Grafisk undersøgelse}
     \begin{figure}[h!]
     \begin{center}
-    \includegraphics[scale=0.5]{Images/N=45.png}
+    \includegraphics[scale=0.5]{images/N=45.png}
     \end{center}
     \caption{$N = 45$ - Eksempel på overensstemmelse.}
     %
@@ -29,7 +29,7 @@
 \begin{frame}{Grafisk undersøgelse}
     \begin{figure}[h!]
     \begin{center}
-    \includegraphics[scale=0.5]{Images/N=6.png}
+    \includegraphics[scale=0.5]{images/N=6.png}
     \end{center}
     \caption{$N = 6$ - Eksempel på at approximationen ikke stemmer overens med funktionen, og at fejlen dermed bliver høj.}
     %
