Update Del26.tex and Del28.tex

--- a/CSB/EPG1/Presentation/Frames/Del26.tex
+++ b/CSB/EPG1/Presentation/Frames/Del26.tex
@@ -11,6 +11,6 @@
     En mulig årsag til forandringer ved fejlen er divergens i yderpunkterne, hvilket kan gøre fejlen betydeligt større end den teoretiske, da de går mod $ \infty $ og $ - \infty $. Det kan også skyldes afrundingsfejl. 
     \begin{figure}
         \centering
-            \includegraphics[scale=0.45]{Images/N=13.png}.
+            \includegraphics[scale=0.45]{images/N=13.png}.
     \end{figure}
 \end{frame}
