--- a/CSB/EPG1/Presentation/Frames/Del28.tex
+++ b/CSB/EPG1/Presentation/Frames/Del28.tex
@@ -8,6 +8,6 @@
     Ved valg af Chebyshevpunkterne som $x$-værdier sker der ikke de store udsving omkring grænseværdierne, og der ses tendens til at fejlen stabiliseres omkring $10^{{-14}}$ ved $N=40$ og frem, uoverenstemmelsen mellem teoretisk og faktisk fejl skyldes her afrundingsfejl. 
     Der er dog små udsving i værdien herefter og ikke et entydigt mønster i, hvorvidt aproksimationen bliver bedre.
     At aproksimationen stabliseres omkring yderpunkterne er endvidere i overenstemmelse med teorien, hvor disse netop er karakteriseret ved at minimere Runges fænomen.
-   \includegraphics[scale=0.40]{Images/chev_N=4.png}
-   \includegraphics[scale=0.40]{Images/Chev_N=14.png}
+   \includegraphics[scale=0.40]{images/chev_N=4.png}
+   \includegraphics[scale=0.40]{images/Chev_N=14.png}
 \end{frame}
