--- a/CSB/EPG2/Presentation/Frames/Del1.tex
+++ b/CSB/EPG2/Presentation/Frames/Del1.tex
@@ -13,3 +13,7 @@ Kvadraturregler
 \end{itemize}
 \end{frame}
 %%
+\input{Frames/Del11.tex}
+\input{Frames/Del12.tex}
+\input{Frames/Del13.tex}
+\input{Frames/Del14.tex}
