Update Del21.tex, Del23.tex, and 8 more files...

--- a/CSB/EPG1/Presentation/Frames/Del21.tex
+++ b/CSB/EPG1/Presentation/Frames/Del21.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Opgave 1: Lagrange-interpolation}
-    Gennemgå teorien for Lagrange interpolation baseret på datapunkterne $x_0, \ldots, x_N$ og $f_0, f_1, \ldots , f_N$. 
-\end{frame}
+%\begin{frame}{Opgave 1: Lagrange-interpolation}
+%    Gennemgå teorien for Lagrange interpolation baseret på datapunkterne $x_0, \ldots, x_N$ og $f_0, f_1, \ldots , f_N$. 
+%\end{frame}
 
 \begin{frame}{Lagrange-interpolation}
     \begin{itemize}
@@ -22,13 +22,13 @@
         
     \end{itemize}
 \end{frame}
-\begin{frame}{Lagrange-interpolation bevis for entydighed}
-    Ved at finde sådanne polynomier, er deres eksistens bevist. 
-    Deres entydighed vil nu bevises. 
-    Antag, at $q_n$ og $p_n$ er to forskellige polynomier med grad $\leq n$, og at de begge interpolerer samme data. 
-    Så er graden af polynomiet $p_n - q_n$ også $\leq n$, og værdien af dette polynomie er $0$ ved $n+1$ datapunkter. 
-    Men en polynomie med grad $n$ har højst $n$ nuller, medmindre det er nulpolynomiet. 
-    Således er $p_n - q_n = 0$, hvormed $p_n = q_n$. 
-\end{frame}
+%\begin{frame}{Lagrange-interpolation bevis for entydighed}
+%    Ved at finde sådanne polynomier, er deres eksistens bevist. 
+%    Deres entydighed vil nu bevises. 
+%    Antag, at $q_n$ og $p_n$ er to forskellige polynomier med grad $\leq n$, og at de begge interpolerer samme data. 
+%    Så er graden af polynomiet $p_n - q_n$ også $\leq n$, og værdien af dette polynomie er $0$ ved $n+1$ datapunkter. 
+%    Men en polynomie med grad $n$ har højst $n$ nuller, medmindre det er nulpolynomiet. 
+%    Således er $p_n - q_n = 0$, hvormed $p_n = q_n$. 
+%\end{frame}
 
 %HER DANIEL
