--- a/CSB/EPG1/Presentation/Frames/Del24.tex
+++ b/CSB/EPG1/Presentation/Frames/Del24.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Opgave 4: Grafisk undersøgelse}
-    Lav en grafisk undersøgelse af fejlen $\lvert f(x)-p_N(x) \rvert$, for en række forskellige værdier af N baseret på en modificeret udgave af \textsc{Interpolation bin.py.}
-\end{frame}
+%\begin{frame}{Opgave 4: Grafisk undersøgelse}
+%    Lav en grafisk undersøgelse af fejlen $\lvert f(x)-p_N(x) \rvert$, for en række forskellige værdier af N baseret på en modificeret udgave af \textsc{Interpolation bin.py.}
+%\end{frame}
 
 \begin{frame}{Grafisk undersøgelse}
     Det ses, at approximationen passer til funktionen ved nogle værdier for $N$, herunder $N = 45$. 
