--- a/CSB/EPG1/Presentation/Frames/Del27.tex
+++ b/CSB/EPG1/Presentation/Frames/Del27.tex
@@ -1,8 +1,8 @@
-\begin{frame}{Opgave 7: Sammenligning af fejlen}
-    Gentag undersøgelserne af den maksimale fejl og sammenlign med den teoretiske vurdering ved at bruge decimalaritmetik-scriptet \textsc{Interpolation dec.py}. 
-    Prøv med forskellige værdier for antallet af betydende cifre. 
-    Hvad er konklusionen?
-\end{frame}
+%\begin{frame}{Opgave 7: Sammenligning af fejlen}
+%    Gentag undersøgelserne af den maksimale fejl og sammenlign med den teoretiske vurdering ved at bruge decimalaritmetik-scriptet \textsc{Interpolation dec.py}. 
+%    Prøv med forskellige værdier for antallet af betydende cifre. 
+%    Hvad er konklusionen?
+%\end{frame}
 
 \begin{frame}{Sammenligning af fejlen}
     Ved lave værdier af betydende cifre er der dårlig præcision, og fejlen overstiger det teoretiske øvre estimat for grænsen. 
