--- a/CSB/EPG1/Presentation/Frames/Del25.tex
+++ b/CSB/EPG1/Presentation/Frames/Del25.tex
@@ -1,30 +1,30 @@
-\begin{frame}{Opgave 5: Teoretisk vurdering af fejlen}
-    Brug Theorem 16 i afsnit 6.2 i Turner til at lave en teoretisk vurdering af fejlen
-    \begin{align*}
-    \underset{x \in \left [0,3 \right ]}{\text{max}} \lvert f(x)-p_N(x) \rvert.
-    \end{align*}
-    %% SE HJÆLP I OPGAVEFORMULERING %% JA TAK %%
-    %
-    %%%%% THEREOM 16 %&%%%%
-    \begin{align*}
-    f(x)-p(x) = \frac{(x-x_0)(x-x_1)\cdots(x-x_N)}{(N+1)!}f^{(N+1)}(\xi)
-    \end{align*}
-    \text{for ethvert} $\xi$ $\in$ $\left [a,b \right ]$.
-    %%%%%%%%%%%%%%%%%%%%%%%
-    \\
-    %%%%% HINT 1/2 %&%%%%
-    Lad
-    \begin{align*}
-    L(x)=(x-x_0)(x-x_1)\cdots(x-x_N).
-    \end{align*}
-    %%%%%%%%%%%%%%%%%%%%%%%
-    \\
-    For ækvidistante punkter $x_{j+1} - x_j = h$ kan man vise, at der gælder
-    %%%%% HINT 2/2 %&%%%%
-    \begin{align*}
-    \lvert L(x) \rvert \leq \frac{1}{4}(N+1)!h^{N+1}, \text{   } x \in \left [x_0, x_N \right ].
-    \end{align*}
-\end{frame}
+%\begin{frame}{Opgave 5: Teoretisk vurdering af fejlen}
+%    Brug Theorem 16 i afsnit 6.2 i Turner til at lave en teoretisk vurdering af fejlen
+%    \begin{align*}
+%    \underset{x \in \left [0,3 \right ]}{\text{max}} \lvert f(x)-p_N(x) \rvert.
+%    \end{align*}
+%    %% SE HJÆLP I OPGAVEFORMULERING %% JA TAK %%
+%    %
+%    %%%%% THEREOM 16 %&%%%%
+%    \begin{align*}
+%    f(x)-p(x) = \frac{(x-x_0)(x-x_1)\cdots(x-x_N)}{(N+1)!}f^{(N+1)}(\xi)
+%    \end{align*}
+%    \text{for ethvert} $\xi$ $\in$ $\left [a,b \right ]$.
+%    %%%%%%%%%%%%%%%%%%%%%%%
+%    \\
+%    %%%%% HINT 1/2 %&%%%%
+%    Lad
+%    \begin{align*}
+%    L(x)=(x-x_0)(x-x_1)\cdots(x-x_N).
+%    \end{align*}
+%    %%%%%%%%%%%%%%%%%%%%%%%
+%    \\
+%    For ækvidistante punkter $x_{j+1} - x_j = h$ kan man vise, at der gælder
+%    %%%%% HINT 2/2 %&%%%%
+%    \begin{align*}
+%    \lvert L(x) \rvert \leq \frac{1}{4}(N+1)!h^{N+1}, \text{   } x \in \left [x_0, x_N \right ].
+%    \end{align*}
+%\end{frame}
 
 \begin{frame}{Teoretisk vurdering af fejlen}
     Udtrykket for maksimal fejl kan derfor omskrives til
