--- a/CSB/EPG2/Presentation/Frames/Del14.tex
+++ b/CSB/EPG2/Presentation/Frames/Del14.tex
@@ -1,5 +1,21 @@
-\begin{frame}{Opgave 4: Den adaptive metode}
-    Vi skal nu se på en anvendelse. Vi definerer en funktion ved
+%\begin{frame}{Opgave 4: Den adaptive metode}
+%    Vi skal nu se på en anvendelse. Vi definerer en funktion ved
+%\begin{align*}
+%f(x) = 
+%\begin{dcases}
+%- \left( x - \sqrt{2} \right)^2 & x \leq \sqrt{2}\\
+%\left( x - \sqrt{2} \right)^2 & x > \sqrt{2} \\
+%\end{dcases}
+%\end{align*} 
+%    
+%    Vi vil se på approksimation af integralet 
+%    \begin{align}
+%    \int_{0}^{3}f(x)dx    
+%    \end{align}
+%    % 
+%\end{frame}
+
+\begin{frame}{Approksimation af integralet}
 \begin{align*}
 f(x) = 
 \begin{dcases}
@@ -8,12 +24,13 @@ f(x) =
 \end{dcases}
 \end{align*} 
     
-    Vi vil se på approksimation af integralet 
+    Approksimation af integralet 
     \begin{align}
     \int_{0}^{3}f(x)dx    
     \end{align}
     % 
 \end{frame}
+
 
 
 \begin{frame}{Den adaptive metode}
@@ -45,6 +62,17 @@ f(x) =
     \end{itemize} 
 \end{frame}
 
+\begin{frame}
+\begin{align*}
+\begin{array}{l|c|c|c}
+\text{Metode} & \text{Resultat}& \text{Fejl} &  \text{Inddelinger} \\
+\hline
+\text{Midtpunkt}	& 3.8645984782 \cdot 10^{-01} & 7.662 \cdot 10^{-09}	& 4096 \\
+\text{Trapez}		& 3.8645985304 \cdot 10^{-01} & 2.437 \cdot 10^{-09} & 8192 \\
+\text{Simpsons}		& 3.8645985931 \cdot 10^{-01} & 3.833 \cdot 10^{-09} & 512 \\
+\end{array}
+\end{align*}
+\end{frame}
 
 \begin{frame}{Den adaptive metode}
     \begin{itemize}
@@ -54,6 +82,14 @@ f(x) =
         %Hvorfor springer orden så meget i Simpson efter 8192?
         \item For både trapez samt midtpunktreglen stabliseres der omkring en orden på $4$ efter et passende antal inddelinger hvilket stemmer overens med teorien, dette er dog ikke tilfældet for Simpson. Den opnår de $16$, men falder drastisk efterfølgende.
     \end{itemize}
+    
+$$\begin{array}{l|c|c}
+\text{Metode} & \text{Inddelinger}& \text{Orden} \\
+\hline
+\text{Midtpunkt}	& 4		& 2 \\
+\text{Trapez}		& 4		& 2 \\
+\text{Simpsons}		& 16	& 4 \\
+\end{array}$$
 \end{frame}
 
 
