--- a/CSB/EPG2/Presentation/Frames/Del21.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21.tex
@@ -7,7 +7,7 @@
 
 \begin{frame}
 \frametitle{Eulers metode } 
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + h f(x_n,y_n) \\
@@ -30,7 +30,7 @@ y_{n+1} & = y_n + h f(x_n,y_n) \\
 %
 \begin{frame}
 \frametitle{Korrigeret Eulersmetode } 
-\begin{minipage}[b]{0.31\textwidth}
+\begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
 k_2 & = f \left( x_n + \frac{h}{2} , y_n = + \frac{h}{2} k_1 \right)  \\
