--- a/CSB/EPG2/incl/main/14.tex
+++ b/CSB/EPG2/incl/main/14.tex
@@ -48,5 +48,6 @@ Angiv resultaterne for både trapezreglen og Simpsons regel. \\
 % Intervallet deles til 0-1.5 og 1.5-3 og husk at modificere Iexact, så skulle vi kunne konkludere fejlen. 
 \textbf{Besvarelse:} \\
 Integralet af funktionen fra 1.5 til 3 er præcist idet antallet af indelinger er ligegyldigt da det er et tredjegradspolynomium og funktionen forbliver stabil i hele intervallet, derimod sker der fra 0 til 1.5 det at funktionen skifter og derfor behov for et større antal indelinger og det biddrager hermed til at denne del af aproksimationen giver en større fejl med behov for et større antal indelinger.
+For Trapez: her biddrager begge intervaller lige meget til fejlen og kræver samme antal underindelinger(512 hvis mit bud om faktor 3 er korrekt) dette skyldes at præcisionen er mindre her hvorfor approskismationen ikke er lig funktionsværdien i intervallet fra 1.5 til 3 heller
 %%%%%%%%% DONZO GONZO %%%%%%%%%%
 %
