Update Del1.tex, Del11.tex, and 3 more files...

--- a/CSB/EPG2/Presentation/Frames/Del11.tex
+++ b/CSB/EPG2/Presentation/Frames/Del11.tex
@@ -1,10 +1,10 @@
-\begin{frame}{Opgave 1: Interpolerende kvadraturregler}
-    Redegør for interpolerende kvadraturregler. 
-    Beskriv de tre regler, midtpunktsreglen, trapezreglen, og Simpsons regel. 
-    Udled mindst en af reglerne. Forklar begrebet ‘grad af præcision’ for en interpolerende kvadraturregel. 
-    Angiv grad af præcision for de tre ovennævnte regler. 
-    Svarene skal begrundes.
-\end{frame}
+%\begin{frame}{Opgave 1: Interpolerende kvadraturregler}
+%    Redegør for interpolerende kvadraturregler. 
+%    Beskriv de tre regler, midtpunktsreglen, trapezreglen, og Simpsons regel. 
+%    Udled mindst en af reglerne. Forklar begrebet ‘grad af præcision’ for en interpolerende kvadraturregel. 
+%    Angiv grad af præcision for de tre ovennævnte regler. 
+%    Svarene skal begrundes.
+%\end{frame}
 
 \begin{frame}{Interpolerende kvadraturregler}
     Interpolerende kvadraturregler approksimerer en funktion $f(x)$ med et polynomie $p(x)$ over et interval for at beregne det bestemte integrale for $p(x)$, således at 
