--- a/CSB/EPG2/Presentation/Frames/Del23b.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23b.tex
@@ -31,8 +31,8 @@
 \begin{frame}
 \frametitle{Betydning af parametrene}
 \begin{itemize}
-\item Fordobling af antal immune, 
 \item $x_{1,0}$ fra 90 til 85
+\item Fordobling af antal immune
 \end{itemize}
 
 \begin{minipage}{0.49\textwidth}
