--- a/CSB/EPG2/Presentation/Frames/Del21.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21.tex
@@ -7,7 +7,7 @@
 
 \begin{frame}
 \frametitle{Eulers metode } 
-\begin{minipage}[t]{0.31\textwidth}
+\begin{minipage}[b]{0.31\textwidth}
 \begin{align*}
 x_{n+1} & = x_n+h \\
 y_{n+1} & = y_n + h f(x_n,y_n) \\
