Update Del11.tex, Del13.tex, and 8 more files...

--- a/CSB/EPG1/Presentation/Frames/Del14a.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14a.tex
@@ -1,3 +1,4 @@
+% MADS
 \begin{frame}
 \frametitle{Nulpunktbestemmelse med \phantom{Heeekjjjjeej} bisektion og Newton}
 \begin{itemize}
@@ -8,7 +9,8 @@
 $$\begin{array}{l|c|c}
 \text{Metode} & \text{Resultat} & \text{Iterationer}\\
 \hline
+\text{Bisektion}	& 189.94865 & 46\\
 \text{Newton}		& 189.94865 & 7\\
-\text{Sekant}		& 189.94865 & 9
 \end{array}$$
+
 \end{frame}
