--- a/CSB/EPG1/Presentation/Frames/Del14c.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14c.tex
@@ -1,9 +1,11 @@
+% JULIE 
 \begin{frame}
-\frametitle{Fixpunktsligning}
+\frametitle{Integrationsmetoden}
 \center
 %
 \begin{itemize}
 \item Python
+\item Fixpunktsligning
 \end{itemize}
 %
 \begin{align*}
