--- a/CSB/EPG2/Presentation/Frames/Del23.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23.tex
@@ -23,5 +23,6 @@
 \item $x_1(t)$ Individer der er modtagelige 
 \item $x_2(t)$ Antal smittede 
 \item $x_3(t)$ Antal immune 
+\item Python - Eulers metode og RK4
 \end{itemize}
 \end{frame}
