--- a/CSB/EPG1/Presentation/Frames/Del13.tex
+++ b/CSB/EPG1/Presentation/Frames/Del13.tex
@@ -1,4 +1,4 @@
-%
+% JULIE
 %
 \begin{frame}
 \frametitle{Bisektionsmetoden} 
@@ -169,7 +169,7 @@
 \end{center}
 \end{frame}
 %
-%
+% MADS 
 %
 \begin{frame}
 \frametitle{Newtons metode}
