Update Del23.tex, Del23b.tex, and Del23c.tex

--- a/CSB/EPG2/Presentation/Frames/Del23b.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23b.tex
@@ -1,3 +1,4 @@
+% JULIE 
 \begin{frame}
 \frametitle{Betydning af parametrene}
 \begin{itemize}
@@ -28,6 +29,7 @@
 \end{minipage}
 \end{frame}
 %
+% MADS 
 \begin{frame}
 \frametitle{Betydning af parametrene}
 \begin{itemize}
