Update Del21.tex, euler.tex, and 3 more files...

--- a/CSB/EPG2/Presentation/Frames/Del21.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21.tex
@@ -30,7 +30,7 @@ y_{n+1} & = y_n + h f(x_n,y_n) \\
 %
 %
 \begin{frame}
-\frametitle{Korrigeret Eulersmetode } 
+\frametitle{Korrigeret Eulersmetode $\alpha = \frac{1}{2}$ } 
 \begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
@@ -56,7 +56,7 @@ y_{n+1} & = y_n + h k_2 \\
 %
 %
 \begin{frame}
-\frametitle{Modificeret Eulersmetode}  
+\frametitle{Modificeret Eulersmetode $\alpha = 1$}  
 \begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
@@ -83,7 +83,7 @@ y_{n+1} & = y_n + \frac{h}{2} (k_1 + k_2 ) \\
 %
 % MADS
 \begin{frame}
-\frametitle{Heuns metode }
+\frametitle{Heuns metode $\alpha = \frac{2}{3}$ }
 \begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 k_1 & = f(x_n , y_n) \\
