Update Del13.tex, Del14a.tex, and 3 more files...

--- a/CSB/EPG1/Presentation/Frames/Del14a.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14a.tex
@@ -1,4 +1,5 @@
 % MADS
+\subsection{Numerisk eksperiment}
 \begin{frame}
 \frametitle{Nulpunktbestemmelse med \phantom{Heeekjjjjeej} bisektion og Newton}
 \begin{itemize}
