--- a/CSB/EPG2/Presentation/Frames/Del21.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21.tex
@@ -6,6 +6,7 @@
 %\end{frame}
 %
 % JULIE
+\subsection{Runge-Kutta metoder}
 \begin{frame}
 \frametitle{Eulers metode } 
 \begin{minipage}[b]{0.31\textwidth}
