--- a/CSB/EPG2/Presentation/Frames/Del23b.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23b.tex
@@ -4,14 +4,12 @@
 \begin{itemize}
 \item Fordobling af $\alpha$
 \end{itemize}
+\includegraphics[scale=0.295]{fig/img/a1_b35_g0.png}
+\includegraphics[scale=0.295]{fig/img/t_a1_b35_g0.png}
 
-\begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_a1_b35_g0.png}
-\end{minipage}
+\includegraphics[scale=0.295]{fig/img/a2_b35_g0.png}
+\includegraphics[scale=0.295]{fig/img/t_a2_b35_g0.png}
 %
-\begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_a2_b35_g0.png}
-\end{minipage}
 \end{frame}
 %
 \begin{frame}
@@ -19,14 +17,11 @@
 \begin{itemize}
 \item Fordobling af $\beta$
 \end{itemize}
-
-\begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_a1_b35_g0.png}
-\end{minipage}
+\includegraphics[scale=0.295]{fig/img/a1_b35_g0.png}
+\includegraphics[scale=0.295]{fig/img/t_a1_b35_g0.png}
 %
-\begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_a1_b7_g0.png}
-\end{minipage}
+\includegraphics[scale=0.295]{fig/img/a1_b7_g0.png}
+\includegraphics[scale=0.295]{fig/img/t_a1_b7_g0.png}
 \end{frame}
 %
 % MADS 
