Update Del13.tex and Del14c.tex

--- a/CSB/EPG1/Presentation/Frames/Del13.tex
+++ b/CSB/EPG1/Presentation/Frames/Del13.tex
@@ -59,6 +59,7 @@
 \frametitle{Integrationsmetoden} 
 \begin{itemize}
 \item Fixpunktsligning $g(x) = x$
+\item $x_n = g(x_{n-1} )$
 \end{itemize}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
