--- a/CSB/EPG1/Presentation/Frames/Del14c.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14c.tex
@@ -4,21 +4,22 @@
 \center
 %
 \begin{itemize}
-\item Python
 \item Fixpunktsligning
 \end{itemize}
 %
 \begin{align*}
-\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})=\lambda+15 
+\lambda \cdot \text{cosh} \left( \dfrac{75}{\lambda} \right) =\lambda+15 
 \phantom{HHH} & \Leftrightarrow \phantom{HHH}
-\lambda=\dfrac{\lambda+15}{\text{cosh}(\dfrac{75}{\lambda})} \\
+\lambda=\dfrac{\lambda+15}{\text{cosh} \left( \dfrac{75}{\lambda} \right) } \\
 \\
  \phantom{HHH} & \Leftrightarrow \phantom{HHH}
-\lambda = \lambda \cdot \text{cosh}(\dfrac{75}{\lambda})-15  
+\lambda = \lambda \cdot \text{cosh} \left( \dfrac{75}{\lambda} \right)-15  
 \end{align*}
 \begin{itemize}
+\item Python
 \item Første virker ikke 
-\item Anden virker 
+\item Anden virker
+\item Sætning 13 i Turner: \\ En eksakt løsning til $g(x)=x$ i det givne interval
 \end{itemize}
 %Virker
 %Første omksrivning virker ikke, mens anden kommer frem til en løsning, når de bruges i scriptsene.
