--- a/CSB/EPG2/Presentation/Frames/Del23b.tex
+++ b/CSB/EPG2/Presentation/Frames/Del23b.tex
@@ -28,7 +28,7 @@
 \begin{frame}
 \frametitle{Betydning af parametrene}
 \begin{itemize}
-\item $x_{1,0}$ fra 90 til 85
+\item Ændring af $x_{1,0}$ fra $90$ til $85$
 \item Fordobling af antal immune
 \end{itemize}
 
@@ -44,7 +44,8 @@
 \begin{frame}
 \frametitle{Betydning af parametrene}
 \begin{itemize}
-\item Ændring af indledende syge, $x_{2,0}$, fra $5$ til $1$
+\item Ændring af $x_{2,0}$ fra $5$ til $1$
+\item Immune fra $5$ til $9$
 \end{itemize}
 
 \begin{minipage}{0.49\textwidth}
@@ -52,8 +53,22 @@
 \end{minipage}
 %
 \begin{minipage}{0.49\textwidth}
-\includegraphics[scale=0.3]{fig/img/t_x1_1_x2_95.png}
+\includegraphics[scale=0.3]{fig/img/t_x1_1_x2_90.png}
 \end{minipage}
 \end{frame}
 %
+\begin{frame}
+\frametitle{Betydning af parametrene}
+\begin{itemize}
+\item Ændring af $x_{2,0}$ fra $5$ til $1$ og $x_{1,0}$ fra $90$ til $94$
+\item Fastholdelse af immune
+\end{itemize}
 
+\begin{minipage}{0.49\textwidth}
+\includegraphics[scale=0.3]{fig/img/t_a1_b35_g0.png}
+\end{minipage}
+%
+\begin{minipage}{0.49\textwidth}
+\includegraphics[scale=0.3]{fig/img/t_x1_1_x2_94.png}
+\end{minipage}
+\end{frame}
