--- a/CSB/EPG1/Presentation/Frames/Del21.tex
+++ b/CSB/EPG1/Presentation/Frames/Del21.tex
@@ -4,10 +4,10 @@
 
 \begin{frame}{Lagrange-interpolation}
     \begin{itemize}
-        \item Lagrange-interpolation handler om at finde et polynomium $p(x_k)=f(x_k)$ af mindst mulig grad og er således en måde at approksimere en funktionsværdi givet $x_0 \ldots x_N$ og $N+1 $  $y$ værdier.
-        Det ønskes således at finde et polynomium med interpolationsegenskaben $p_{x_j}=y_j$,$j=0,1,\ldots,N$.
+        \item Lagrange-interpolation finder et polynomium $p(x_k)=f(x_k)$ af mindst mulig grad % og er således en måde at approksimere en funktionsværdi givet $x_0 \ldots x_N$ og $N+1 $  $y$ værdier.
+        \item Det ønskes således at finde et polynomium med interpolationsegenskaben $p_{x_j}=y_j$,$j=0,1,\ldots,N$.
 
-        \item Problemet omhandler således at finde et $N$'te grads polynomium $p$, der tager funktionsværdien for $f$ i en givet mængde punkter. 
+        \item Problemet omhandler således at finde et $N$'te grads polynomium $p$, der tager funktionsværdien for $f$ i en given mængde punkter. 
         Ideen kan således relateres til taylorserier og konstruktion af taylorpolynomier, da disse ligeledes antager funktionsværdien i et givet udviklingspunkt.
     \end{itemize}
 \end{frame}
