--- a/CSB/EPG1/Presentation/Frames/Del13.tex
+++ b/CSB/EPG1/Presentation/Frames/Del13.tex
@@ -56,7 +56,7 @@
 \end{frame}
 %
 \begin{frame}
-\frametitle{Integrationsmetoden} 
+\frametitle{Iterationsmetoden}
 \begin{itemize}
 \item Fixpunktsligning $g(x) = x$
 \item $x_n = g(x_{n-1} )$
