--- a/CSB/EPG1/Presentation/Frames/Del14d.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14d.tex
@@ -13,6 +13,6 @@ $$\begin{array}{l|c|c}
 \text{Bisektion}	& 189.94865 & 46\\
 \text{Newton}		& 189.94865 & 7\\
 \text{Sekant}		& 189.94865 & 9\\
-\text{Integrations}	& 189.94865 & 345
+\text{Iterations}	& 189.94865 & 345
 \end{array}$$
 \end{frame}
